2011-07-26  Mark Hahnenberg  <mhahnenberg@apple.com>

        reduce and reduceRight bind callback's this to null rather than undefined
        https://bugs.webkit.org/show_bug.cgi?id=62264

        Reviewed by Oliver Hunt.

        Fixed Array.prototype.reduce and Array.prototype.reduceRight so that they behave correctly
        when calling the callback function without an argument for this, which means it should 
        be undefined according to ES 15.4.4.21 and 15.4.4.22.

        * runtime/ArrayPrototype.cpp:
        (JSC::arrayProtoFuncReduce):
        (JSC::arrayProtoFuncReduceRight):

2011-07-26  Filip Pizlo  <fpizlo@apple.com>

        JSC command-line tool does not come with any facility for
        measuring time precisely.
        https://bugs.webkit.org/show_bug.cgi?id=65223

        Reviewed by Gavin Barraclough.
        
        Exposed WTF::currentTime() as currentTimePrecise().

        * jsc.cpp:
        (GlobalObject::GlobalObject):
        (functionPreciseTime):

2011-07-26  Filip Pizlo  <fpizlo@apple.com>

        DFG speculative JIT never emits inline double comparisons, even when it
        would be obvious more efficient to do so.
        https://bugs.webkit.org/show_bug.cgi?id=65212

        Reviewed by Gavin Barraclough.
        
        This handles the obvious case of inlining double comparisons: it only addresses
        the speculative JIT, and only for fused compare/branch sequences.  But it does
        handle the case where both operands are double (and there is no slow path),
        or where one operand is double and the other is unknown type (in which case it
        attempts to unbox the double, otherwise taking slow path).  This is an 0.8%
        speed-up on SunSpider.

        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::convertToDouble):
        (JSC::DFG::SpeculativeJIT::compilePeepHoleDoubleBranch):
        (JSC::DFG::SpeculativeJIT::compare):
        (JSC::DFG::SpeculativeJIT::compile):